@@ -35,8 +35,11 @@ class CacheViewPurge extends JView
 		JToolBarHelper::title(JText::_('Cache Manager - Purge Cache Admin'), 'purge.png');
 		JToolBarHelper::custom('purge', 'delete.png', 'delete_f2.png', 'Purge expired', false);
 		JToolBarHelper::divider();
-		JToolBarHelper::preferences('com_cache');
-		JToolBarHelper::divider();
+		if (JFactory::getUser()->authorise('core.admin', 'com_cache'))
+		{
+			JToolBarHelper::preferences('com_cache');
+			JToolBarHelper::divider();
+		}
 		JToolBarHelper::help('screen.cache');
 	}
 }
